# transcription-frontend

./: .gitignore  README.md  docker-compose.yml  test_webhook.py
backend/: .env.example  .gitignore  Dockerfile  LangModel.py  main.py  pyproject.toml  requirements.txt  transcribe.py
frontend/: .gitignore  Dockerfile  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.vue  main.js
frontend/src/assets/: base.css  main.css
frontend/src/components/: TranscribeProgress.vue  TranscriptionCard.vue  TranscriptionCardList.vue  WaveFormComponent.vue
frontend/src/router/: index.js
frontend/src/stores/: transcription_status.js  transcriptions.js  user.js
frontend/src/views/: HomeView.vue  LoginView.vue  TranscriptionView.vue
