[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcription-frontend"
version = "0.1.0"
description = "A full-stack application for audio transcription with a Vue.js frontend and FastAPI backend"
readme = "README.md"
authors = [
    {name = "Fabian Abraham", email = "mail@fabraham.dev"}
]
requires-python = "==3.11.10"
license = {text = "MIT"}
dependencies = [
    "fastapi==0.101.0",
    "uvicorn[standard]==0.23.2",
    "tinydb==4.8.0",
    "bcrypt==4.0.1",
    "pydantic~=2.1.1",
    "python-dotenv~=1.0.0",
    "pyjwt[crypto]==2.8.0",
    "requests==2.31.0",
    "uuid==1.30",
    "python-multipart",
    "openai-whisper==20230314",
    "torch==2.0.1",
]

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
secondary = true

[project.urls]
Homepage = "https://github.com/blaxzter/transcription-frontend"
Issues = "https://github.com/blaxzter/transcription-frontend/issues"